# giveawaybot-canary

./: .gitignore  Cargo.toml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  schema.sql
migrations/: 20200822003628_init.sql
src/bot/: Cargo.toml
src/website/: Cargo.toml  Dockerfile
src/website/src/: main.rs
src/website/src/routes/: auth.rs
src/website/src/util/: auth.rs  discord.rs
src/website/static/: index.html  notfound.html
