[package]
name = "bot"
version = "0.1.0"
authors = ["Carter Himmel <carter@elhnet.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.7"
log = "0.4"
rustacles-brokers = { git = "https://github.com/spec-tacles/rustacles", branch = "feat/rpc" }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "0.2", features = ["full"] }
